[package]
name = "KZG"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
halo2_proofs = "0.3.0"
halo2curves = "0.6.1"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
